<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/calcResultDefault"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="end|bottom"
        android:background="@color/light_grey"/>

    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/sevenButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_7"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/eightButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_8"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/nineButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_9"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/divideButton"
            style="@style/Theme.OperandButton"
            android:text="@string/divide"
            android:onClick="onOperand" />
    </LinearLayout>

    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/fourButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_4"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/fiveButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_5"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/sixButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_6"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/multiplyButton"
            style="@style/Theme.OperandButton"
            android:text="@string/multiply"
            android:onClick="onOperand" />
    </LinearLayout>

    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/oneButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_1"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/twoButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_2"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/threeButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_3"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/minusButton"
            style="@style/Theme.OperandButton"
            android:text="@string/minus"
            android:onClick="onOperand" />
    </LinearLayout>

    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/clearButton"
            style="@style/Theme.FunctionButton"
            android:text="@string/clear"
            android:onClick="onClear" />
        <Button
            android:id="@+id/zeroButton"
            style="@style/Theme.DigitButton"
            android:text="@string/_0"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/pointButton"
            style="@style/Theme.DigitButton"
            android:text="@string/point"
            android:onClick="onPoint" />
        <Button
            android:id="@+id/plusButton"
            style="@style/Theme.OperandButton"
            android:text="@string/add"
            android:onClick="onOperand" />
    </LinearLayout>

    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:id="@+id/calculateButton"
            style="@style/Theme.CalculateButton"
            android:text="@string/calculate"
            android:onClick="onCalculate" />
    </LinearLayout>
</LinearLayout>